# mutautomata

./: Cargo.toml  README.md  another_idea.md  cool_seeds.txt  idea.md  idea2.md
src/: draw.rs  lib.rs  main.rs
