[package]
name = "mini-machines"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
watertender = { git = "https://github.com/Masterchef365/watertender.git", branch = "main" }
#watertender = { path = "../watertender" }
rand = { version = "0.8", features = ["small_rng"] }
structopt = { version = "0.3", default-features = false }
