[package]
name = "mutautomata"
version = "0.1.0"
edition = "2018"

[features]
vr = ["idek/openxr"]

[dependencies]
anyhow = "1"
idek = { git = "https://github.com/Masterchef365/idek.git", rev = "2124218" }
rand = { version = "0.8", features = ["small_rng"] }
structopt = { version = "0.3", default-features = false }
