[package]
name = "mini-machines"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watertender = { git = "https://github.com/Masterchef365/watertender.git", rev = "55cebc1" }
rand = { version = "0.8", features = ["small_rng"] }
deflate = "0.9"
bytemuck = "1.7"
